updated nsrs form and fix dark mode

--- a/assets/css/applicant_profile.css
+++ b/assets/css/applicant_profile.css
@@ -7,8 +7,10 @@
 html{
     height: 100vh;
 }
-.main-container{
+body{
     background: var(--primary-color);
+}
+.main-container{
     margin-top: 70px;
     width: 100%;
     overflow-y: hidden;
@@ -17,6 +19,7 @@ h1 {
     text-align: center;
 }
 h2 {
+    color: var(--secondary-color);
     font-family: 'Mohave', sans-serif;
     font-size: 16px;
     margin: 0;
@@ -269,6 +272,7 @@ select:valid{
     background-color: #ffdddd;
   }
 .cert-cons{
+    color: var(--secondary-color);
     padding: 20px 100px;
     border-radius: 16px;
     margin: 50px 20px;
